# dummy

./: .pre-commit-config.yaml  main.py  pyproject.toml  tox.ini
.github/workflows/: build.yaml
dummy/: __init__.py  main.py
tests/: test_dummy.py
