[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["suchlulz <suchlulz@lawl.pw>"]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
